--- a/public/dashboard/admin.html
+++ b/public/dashboard/admin.html
@@ -5,11 +5,16 @@
     <meta http-equiv=”X-UA-Compatible” content=”IE=edge”>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Dashboard</title>
+    <link href="/assets/css/app.css" type="text/css" rel="stylesheet">
   </head>
-  <body ng-app="admin">
+  <body ng-app="app">
+
     <div class="container">
       <nav-bar></nav-bar>
+
       <div ui-view></div>
     </div>
+
+    <script type="text/javascript" src="/assets/js/app.bundle.js"></script>
   </body>
 </html>
