--- a/public/dashboard/js/tenant/tenantNav/template.html
+++ b/public/dashboard/js/tenant/tenantNav/template.html
@@ -1,6 +1,5 @@
-<nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: #5A0000;">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -8,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a ui-sref="root.tenant.home">
+      <a ui-sref="root.tenant.home" ui-sref-active="active">
         <p title="Profile" class="navbar-text">
           <span class="glyphicon glyphicon-user"></span>
             {{ $ctrl.email }}
@@ -18,17 +17,17 @@
     </div>
     <div class="collapse navbar-collapse" id="collapsable">
       <ul class="nav navbar-nav">
-        <li><a ui-sref="root.tenant.billing">Billing</a></li>
+        <li><a ui-sref="root.tenant.billing" ui-sref-active="active">Billing</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a title="Settings" ui-sref="root.tenant.settings.personal">
+          <a title="Settings" ui-sref="root.tenant.settings.personal" ui-sref-active="active">
             <span class="glyphicon glyphicon-cog"></span>
             Profile & Settings
           </a>
         </li>
         <li>
-          <a title="Help" ui-sref="root.help">
+          <a title="Help" ui-sref="root.help" ui-sref-active="active">
             <span class="glyphicon glyphicon-question-sign"></span>
             Help
           </a>
